--- a/Danish/main/DeskClock.apk/res/values-da/arrays.xml
+++ b/Danish/main/DeskClock.apk/res/values-da/arrays.xml
@@ -56,4 +56,10 @@
         <item>Man til Fre</item>
         <item>Brugerdefineret</item>
     </string-array>
+    <string-array name="alarm_repeat_type_no_workdays">
+        <item>En gang</item>
+        <item>Dagligt</item>
+        <item>Man til Fre</item>
+        <item>Brugerdefineret</item>
+    </string-array>
 </resources>
